# data-workshop-python

./: Makefile  README.md  pyproject.toml
data_workshop/: main.py
data_workshop/actors/: adding_actor.py  averaging_actor.py  country_splitter_actor.py  energy_data_spout_actor.py  get_renewables_consumption_actor.py  std_dev_actor.py
data_workshop/repositories/: energy_data_record.py  energy_data_repository.py
tests/data_workshop/actors/: actor_test_probe.py  test_actor_test_probe.py  test_adding_actor.py  test_averaging_actor.py  test_country_splitter_actor.py  test_energy_data_spout_actor.py  test_get_renewable_consumption_actor.py  test_std_dev_actor.py
tests/data_workshop/repositories/: test_energy_data_repository.py
