[tool.poetry]
name = "data-workshop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "data_workshop"}]

[tool.poetry.dependencies]
python = "~3.11"
pykka = "^4.0.1"
pydantic = "^2.4.2"
polyfactory = "^2.11.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = ">=0.0.277,<0.0.293"
mypy = "^1.4.0"
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"
numpy = "^1.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
strict=true

[[tool.mypy.overrides]]
module = [
  "wiremock.*",
]
ignore_missing_imports = true

[tool.ruff]
select = ["R", "A", "B", "S", "F"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]